plurality
#include <cs50.h>
#include <stdio.h>
#include <string.h>

// Max number of candidates
#define MAX 9

// Candidates have name and vote count
typedef struct
{
    string name;
    int votes;
}
candidate;

// Array of candidates
candidate candidates[MAX];

// Number of candidates
int candidate_count;

// Function prototypes
bool vote(string name);
void print_winner(void);

int main(int argc, string argv[])
{
    // Check for invalid usage
    if (argc < 2)
    {
        printf("Usage: plurality [candidate ...]\n");
        return 1;
    }

    // Populate array of candidates
    candidate_count = argc - 1;
    if (candidate_count > MAX)
    {
        printf("Maximum number of candidates is %i\n", MAX);
        return 2;
    }
    for (int i = 0; i < candidate_count; i++)
    {
        candidates[i].name = argv[i + 1];
        candidates[i].votes = 0;
    }

    int voter_count = get_int("Number of voters: ");

    // Loop over all voters
    for (int i = 0; i < voter_count; i++)
    {
        string name = get_string("Vote: ");

        // Check for invalid vote
        if (!vote(name))
        {
            printf("Invalid vote.\n");
        }
    }

    // Display winner of election
    print_winner();
}

// Update vote totals given a new vote
bool vote(string name)
{
    for(int cand = 0; cand < candidate_count; cand++)
    {
        if(strcomp(name, candidates[cand].name) == 0)
        {
            candidates[cand].votes++;
            
            return true;
        }
    }
    
    return false;
}

// Print the winner (or winners) of the election
void print_winner(void)
{
    int votecount = 0;
    
    for(cand = 0; cand < candidate_count; cand++)
    {
        if(candidates[cand].votes >= votecount)
        {
            votecount = candidates[cand].votes
        }
    }
    
    for(cand = 0; cand < candidate_count; cand++)
    {
        if(candidates[cand].votes == votecount)
        {
            printf("%s \n", candidates[cand].name);
        }
    }
    
    return;
}

plurality.c:71:13: error: declaration shadows a local variable [-Werror,-Wshadow]
    for(int cand; cand < candidate_count; cand++)
            ^
plurality.c:69:9: note: previous declaration is here
    int cand = 0;
        ^
plurality.c:71:19: error: variable 'cand' is uninitialized when used here [-Werror,-Wuninitialized]
    for(int cand; cand < candidate_count; cand++)
                  ^~~~
plurality.c:71:17: note: initialize the variable 'cand' to silence this warning
    for(int cand; cand < candidate_count; cand++)
                ^
                 = 0
plurality.c:89:9: error: use of undeclared identifier 'cand'
    for(cand = 0; cand < candidate_count; cand++)
        ^
plurality.c:89:19: error: use of undeclared identifier 'cand'; did you mean 'scanf'?
    for(cand = 0; cand < candidate_count; cand++)
                  ^~~~
                  scanf
/usr/include/stdio.h:410:24: note: 'scanf' declared here
extern int __REDIRECT (scanf, (const char *__restrict __format, ...),
                       ^
plurality.c:89:24: error: ordered comparison between pointer and integer ('int (*)(const char *restrict, ...)' and 'int') [-Werror]
    for(cand = 0; cand < candidate_count; cand++)
                  ~~~~ ^ ~~~~~~~~~~~~~~~
plurality.c:89:43: error: use of undeclared identifier 'cand'
    for(cand = 0; cand < candidate_count; cand++)
                                          ^
plurality.c:91:23: error: use of undeclared identifier 'cand'; did you mean 'scanf'?
        if(candidates[cand].votes >= votecount)
                      ^~~~
                      scanf
/usr/include/stdio.h:410:24: note: 'scanf' declared here
extern int __REDIRECT (scanf, (const char *__restrict __format, ...),
                       ^
plurality.c:91:22: error: array subscript is not an integer
        if(candidates[cand].votes >= votecount)
                     ^~~~~
plurality.c:93:36: error: use of undeclared identifier 'cand'; did you mean 'scanf'?
            votecount = candidates[cand].votes
                                   ^~~~
                                   scanf
/usr/include/stdio.h:410:24: note: 'scanf' declared here
extern int __REDIRECT (scanf, (const char *__restrict __format, ...),
                       ^
plurality.c:93:35: error: array subscript is not an integer
            votecount = candidates[cand].votes
                                  ^~~~~
plurality.c:97:9: error: use of undeclared identifier 'cand'
    for(cand = 0; cand < candidate_count; cand++)
        ^
plurality.c:97:19: error: use of undeclared identifier 'cand'; did you mean 'scanf'?
    for(cand = 0; cand < candidate_count; cand++)
                  ^~~~
                  scanf
/usr/include/stdio.h:410:24: note: 'scanf' declared here
extern int __REDIRECT (scanf, (const char *__restrict __format, ...),
                       ^
plurality.c:97:24: error: ordered comparison between pointer and integer ('int (*)(const char *restrict, ...)' and 'int') [-Werror]
    for(cand = 0; cand < candidate_count; cand++)
                  ~~~~ ^ ~~~~~~~~~~~~~~~
plurality.c:97:43: error: use of undeclared identifier 'cand'
    for(cand = 0; cand < candidate_count; cand++)
                                          ^
plurality.c:99:23: error: use of undeclared identifier 'cand'; did you mean 'scanf'?
        if(candidates[cand].votes == votecount)
                      ^~~~
                      scanf
/usr/include/stdio.h:410:24: note: 'scanf' declared here
extern int __REDIRECT (scanf, (const char *__restrict __format, ...),
                       ^
plurality.c:99:22: error: array subscript is not an integer
        if(candidates[cand].votes == votecount)
                     ^~~~~
plurality.c:101:40: error: use of undeclared identifier 'cand'; did you mean 'scanf'?
            printf("%s \n", candidates[cand].name);
                                       ^~~~
                                       scanf
/usr/include/stdio.h:410:24: note: 'scanf' declared here
extern int __REDIRECT (scanf, (const char *__restrict __format, ...),
                       ^
plurality.c:101:39: error: array subscript is not an integer
            printf("%s \n", candidates[cand].name);
                                      ^~~~~
18 errors generated.
make: *** [<builtin>: plurality] Error 1
